asset/css/style.css
body {
    font-family: "Libre Franklin", sans-serif;
    font-size: 1.2em;
    width: 100%;
    margin: 0;
}
/* ---------------------------header--------------------------- */
header {
    position: relative;
    height: 100vh;
    overflow: hidden;
}

.titre {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    z-index: 2;
    padding: 1rem;
    background-color: rgba(206, 247, 233, 0.8);
}

.slowgan {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    text-align: center;
    font-family: "Dancing Script", cursive;
    background-color: rgba(3, 3, 3, 0.7);
    color: white;
    font-size: xx-large;
    margin-top: 10%;
}

.char {
    display: inline-block;
}

.fougere {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: auto;
    transform: rotate(90deg) translateY(-100vw);
    transform-origin: top left;
    z-index: 0;
    margin-bottom: 0%;
}

.img-fougere {
    opacity: 1;
    transition: opacity 5s ease-in-out;
}
/* ----------------------------main--------------------------- */ 
main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    height: max-content;
    background-color:  rgba(133, 217, 189, 0.6);
    place-items: center;
}

.a-propos, .competence, .cv, .contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 50%;
    height: 70%;
    border-radius: 20px;
    box-shadow: 6px 6px 3px rgb(50, 47, 47);
    background-color: #fbd58e;
    color: black;
    padding: 8%;
    
}

.lien-projet {
    margin-top: 10px;
    text-align: center;
}

.cv, .contact {
    height: 35%;
}

button{
    padding: 1em 2em;
    border-radius: 10px;
    background-color: rgb(228, 210, 119);
    color: black;
    
}

/* ----------------------css button------------------------- */
.button {
    background-color: rgb(228, 210, 119);
    color: black;
    border-radius: 10em;
    font-size: 17px;
    width: 100px;
    padding: 1em 2em;
    margin-top: 2%;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    border: 1px solid black;
    box-shadow: 0 0 0 0 black;
    text-decoration: none;
}

.button:hover {
    transform: translateY(-4px) translateX(-2px);
    box-shadow: 2px 5px 0 0 black;
}

.button:active {
    transform: translateY(2px) translateX(1px);
    box-shadow: 0 0 0 0 black;
}

/* --------------boutton scroll to top------------------------- */ 
#scroll-to-top {
    display: none;
    width: 300px;
}

/* -----------------------css swipper------------------------- */


.swiper {
    width: 300px;
    height: 400px;
}

.swiper-slide {
    border-radius: 20px;
}
.swiper-slide h3 {
    font-size: 2em;
    background-color: #fff;
    margin-top: 50%;
    text-align: center;
}
.button-swiper-container {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
}
.swiper-slide:nth-child(1n) {
        background: #2A7B9B;
        background: linear-gradient(1deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(2n) {
        background: #2A7B9B;
        background: linear-gradient(33deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(3n) {
        background: #2A7B9B;
        background: linear-gradient(65deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(4n) {
        background: #2A7B9B;
        background: linear-gradient(97deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(5n) {
        background: #2A7B9B;
        background: linear-gradient(129deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(6n) {
        background: #2A7B9B;
        background: linear-gradient(161deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(7n) {
        background: #2A7B9B;
        background: linear-gradient(193deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(8n) {
        background: #2A7B9B;
        background: linear-gradient(225deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(9n) {
        background: #2A7B9B;
        background: linear-gradient(257deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    .swiper-slide:nth-child(10n) {
        background: #2A7B9B;
        background: linear-gradient(289deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }
    .swiper-slide:nth-child(11n) {
        background: #2A7B9B;
        background: linear-gradient(321deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 55%, rgba(237, 221, 83, 1) 100%);
    }

    @media screen and (max-width: 1280px) {
        header h2 {
            font-size: 2em;
            text-align: center;
        }

        main {
            grid-template-columns: 1fr;
        }
        .slowgan {
            margin-top: 25%;
            font-size: x-large;
            padding: 10px 20px;
        }
        .a-propos, .competence, .cv, .contact {
            width: 70%;
            height: auto;
            margin: 20px auto;
        }

    }

    @media screen and (max-width: 768px) {

        .swiper {
            width: 220px;
            height: 330px;
        }

        }

        @media screen and (max-width: 480px) {

        body {
            font-size: 1em;
        }

        .swiper {
            width: 180px;
            height: 300px;
        }

    }

